# add-editorconfig

./: .editorconfig  Cargo.toml  README.md
.github/: FUNDING.yml
.github/workflows/: ci.yml
src/: main.rs
